fix(web): dark mode display and use styleMode to true for Highcharts

--- a/apps/web/src/main.css
+++ b/apps/web/src/main.css
@@ -1,3 +1,13 @@
+@import "highcharts/css/highcharts";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.highcharts-container {
+  font-family: Marianne;
+}
+
+.highcharts-background {
+  fill: transparent;
+}
